# even

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  dodo.py  noxfile.py  pyproject.toml  pyrightconfig.json
.github/workflows/: build_publish.yml  codecov.yaml
evn/: .ninja_deps  .ninja_log  __init__.py  __main__.py  _common.hpp  _detect_formatted_blocks.cpp  _token_column_format.cpp  contexts.py  filter_python_output.py  formatter.py  test_evn.py
evn/_prelude/: __init__.py  basic_types.py  chrono.py  lazy_dispatch.py  lazy_import.py  typehints.py  wraps.py
evn/cli/: __init__.py  auto_click_decorator.py  basic_click_type_handlers.py  cli_command_resolver.py  cli_config.py  cli_logger.py  cli_metaclass.py  cli_registry.py  click_type_handler.py  click_util.py  cliconf.py
evn/config/: __init__.py  confload.py
evn/decofunc/: __init__.py  cache.py  deconfig.py  iterize.py  state_management.py
evn/decon/: __init__.py  attr_access.py  bunch.py  item_wise.py  iterables.py  metadata.py
evn/decontain/: __init__.py  bunch.py  item_wise.py  iterables.py  iterize.py
evn/dev/: __init__.py  contexts.py  copy.py  inspect.py
evn/doc/: __init__.py  docstring.py
evn/format/: __init__.py  _detect_formatted_blocks.cpp  _token_column_format.cpp  code_examples.py  formatter.py
evn/meta/: __init__.py  inspect.py  kwargs_tunnel.py  kwcall.py  types.py
evn/print/: __init__.py  table.py
evn/testing/: __init__.py  maintest.py  pytest.py  testapp.py
evn/tests/: test_detect_formatted_blocks.py  test_filter_python_output.py  test_formatter.py  test_token_column_format.py
evn/tests/_prelude/: test_chrono.py  test_import_util.py  test_lazy_dispatch.py  test_lazy_import.py  test_typehints.py
evn/tool/: __init__.py  __main__.py  filter_python_output.py  run_tests_on_file.py
evn/tree/: __init__.py  tree_diff.py  tree_format.py  tree_metrics.py  tree_sanitize.py
ide/: evn.sublime-project  evn.sublime-workspace
(+31 files in other folders)
